[package]
name = "tiny-url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", default-features = false, features = ["cookies", "macros", "compress-gzip", "compress-brotli"] }
serde = {version = "1.0.145", features = ["derive"]}
serde_json = {version = "1.0.2", optional = true}
nanoid = "0.4.0"